<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/hwyt_background_color"
        android:orientation="vertical"
        android:padding="@dimen/large_gap">

        <TableLayout
            android:id="@+id/profile_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/profile_table_row_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_gap"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/profile_avatar_i"
                    style="@style/rounded_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    tools:src="@drawable/avatar_10" />
            </TableRow>

            <TableRow
                android:id="@+id/profile_table_row_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_gap"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/profile_user_tf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_et_hint" />

                <EditText
                    android:id="@+id/profile_user_et"
                    style="@style/rounded_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="text"
                    android:maxWidth="@dimen/profile_username_edit_text_max_width"
                    tools:text="exampleUserName" />
            </TableRow>

            <TableRow
                android:id="@+id/profile_table_row_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_gap"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/profile_pass_tf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_et_hint" />

                <EditText
                    android:id="@+id/profile_pass_et"
                    style="@style/rounded_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxWidth="@dimen/profile_username_edit_text_max_width"
                    tools:text="password" />
            </TableRow>

            <TableRow
                android:id="@+id/profile_table_row_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_gap"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/profile_m_lang_tf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mother_languages" />

                <ImageView
                    android:id="@+id/profile_m_lang_i"
                    style="@style/rounded_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_gap"
                    tools:src="@drawable/english_flag" />
            </TableRow>

            <TableRow
                android:id="@+id/profile_table_row_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_gap"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/profile_s_lang_tf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="@dimen/large_gap"
                    android:text="@string/spoken_languages" />

                <LinearLayout
                    android:id="@+id/profile_s_lang_ll"
                    style="@style/rounded_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:orientation="vertical" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>